reverting to 3 members team layout, changed Lucas photo

--- a/less/creative.less
+++ b/less/creative.less
@@ -296,6 +296,12 @@ header {
     }
 }
 
+@media (max-width: 768px) {
+    .md-reveal {
+        opacity: 1 !important;
+    }
+}
+
 .call-to-action {
     h2 {
         margin: 0 auto 20px;
