--- a/css/creative.css
+++ b/css/creative.css
@@ -278,6 +278,11 @@ header .header-content .header-content-inner p {
     font-size: 22px;
   }
 }
+@media (max-width: 768px) {
+  .md-reveal {
+    opacity: 1 !important;
+  }
+}
 .call-to-action h2 {
   margin: 0 auto 20px;
 }
